--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="modal-body">
                       <form>
-                        <label for="title"> modifica titolo:</label>
+                        <label for="title"> Modifica titolo:</label>
                         <input
                           type="text"
                           id="title"
@@ -78,7 +78,7 @@
                           class="d-block w-100 rounded-2 my-2"
                           [value]="profileData?.title"
                         />
-                        <label for="bio"> modifica bio:</label>
+                        <label for="bio"> Modifica bio:</label>
                         <input
                           type="text"
                           id="bio"
@@ -87,7 +87,7 @@
                           class="d-block w-100 rounded-2 my-2"
                           [value]="profileData?.bio"
                         />
-                        <label for="area"> modifica area:</label>
+                        <label for="area"> Modifica area:</label>
                         <input
                           type="text"
                           id="area"
@@ -101,7 +101,7 @@
                           class="btn-blue-2 d-block"
                           data-bs-dismiss="modal"
                         >
-                          aggiorna profilo
+                          Aggiorna profilo
                         </button>
                       </form>
                     </div>
@@ -118,13 +118,13 @@
           <!-- Bottoni -->
           <div class="row row-cols-3 linkedin-box-content">
             <div class="text-center">
-              <button class="btn btn-blue-2 me-2">disponibile per</button>
+              <button class="btn btn-blue-2 me-2">Disponibile per</button>
             </div>
             <div>
-              <button class="btn btn-blue">aggiungi sezione profilo</button>
+              <button class="btn btn-blue">Aggiungi sezione profilo</button>
             </div>
             <div>
-              <button class="btn btn-gray">aggiungi sezione profilo</button>
+              <button class="btn btn-gray">Aggiungi sezione profilo</button>
             </div>
           </div>
 
@@ -232,7 +232,7 @@
         <div class="col g-4 linkedin-box">
           <div class="linkedin-box-content profilelanguage">
             <div class="d-flex justify-content-between">
-              <p class="bold">lingua del profilo</p>
+              <p class="bold">Lingua del profilo</p>
               <button
                 type="button"
                 class="btn-icon"
@@ -280,9 +280,9 @@
                       </div>
                     </div>
                     <div class="modal-footer d-block">
-                      <p>lingue</p>
-                      <button class="btn btn-gray">italiano</button>
-                      <button class="btn btn-blue">+ aggiungi lingua</button>
+                      <p>Lingue</p>
+                      <button class="btn btn-gray">Italiano</button>
+                      <button class="btn btn-blue">+ Aggiungi lingua</button>
                       <div class="d-flex">
                         <i class="bi bi-lightbulb i"></i>
                         <p>
@@ -298,22 +298,22 @@
                 </div>
               </div>
             </div>
-            <p class="text">italiano</p>
+            <p class="text">Italiano</p>
           </div>
           <div class="linkedin-box-content">
             <div class="d-flex justify-content-between">
-              <p class="bold">Public profile & URl</p>
+              <p class="bold">Public profile & URL</p>
 
               <button type="button " class="btn-icon">
                 <a> <i class="bi bi-pencil text-secondary"></i></a>
               </button>
             </div>
-            <p class="text">link non apribile</p>
+            <p class="text">Link non disponibile</p>
           </div>
         </div>
         <div class="col g-4 linkedin-box">
           <p class="text-end m-0 addPann">
-            annuncio
+            Annuncio
             <button
               type="button"
               class="btn p-0"
@@ -350,15 +350,15 @@
                   <div class="d-flex">
                     <i class="bi bi-info-square-fill me-1"></i>
                     <div class="user-select-none">
-                      <p class="bold m-0">perchè vedo questo annuncio?</p>
-                      <p>gestisci le preferenze per gli annunci pubblicitari</p>
+                      <p class="bold m-0">Perchè vedo questo annuncio?</p>
+                      <p>Gestisci le preferenze per gli annunci pubblicitari</p>
                     </div>
                   </div>
                   <div class="d-flex">
                     <i class="bi bi-flag-fill me-1"></i>
                     <div>
-                      <p class="bold m-0">segnala questo annuncio</p>
-                      <p>non voglio vedere questo annucio nel mio feed</p>
+                      <p class="bold m-0">Segnala questo annuncio</p>
+                      <p>Non voglio vedere questo annucio nel mio feed</p>
                     </div>
                   </div>
                 </div>
@@ -457,7 +457,7 @@
           </div>
 
           <p class="addPann text text-center m-1">
-            scorpi la formazione presso epicode
+            Scopri la formazione presso epicode
           </p>
           <div class="d-flex justify-content-center">
             <img
@@ -472,12 +472,12 @@
             /></a>
           </div>
           <p class="text text-center my-2">
-            {{ profileData?.name }}, sopri le opportunità offerte da
-            <span class="spanEpicodeAdd">epicode</span>
+            {{ profileData?.name }}, scopri le opportunità offerte da
+            <span class="spanEpicodeAdd">Epicode</span>
           </p>
           <div class="d-flex justify-content-center">
             <a href="https://www.linkedin.com/school/epicodeitalia/">
-              <button class="btn btn-blue mb-3">segui</button></a
+              <button class="btn btn-blue mb-3">Segui</button></a
             >
           </div>
         </div>
@@ -495,7 +495,7 @@
             </div>
             <div class="profilelanguage d-flex">
               <button class="mb-2 marginButtuonIcon d-block btn btn-gray">
-                <i class="bi bi-person-fill-add"></i> colegati
+                <i class="bi bi-person-fill-add"></i> Collegati
               </button>
             </div>
           </div>
