--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -130,7 +130,7 @@
               data-bs-target="#offcanvasRight"
               aria-controls="offcanvasRight"
             >
-              per le aziende <i class="bi bi-caret-down-fill fs-6"></i>
+              Per le aziende <i class="bi bi-caret-down-fill fs-6"></i>
             </button>
 
             <ul class="dropdown-list" *ngIf="isCompanyDropdownOpen">
