--- a/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
+++ b/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
@@ -42,6 +42,7 @@
       [value]="experienceData.endDate"
       [(ngModel)]="experienceData.endDate"
     />
-    <button>ok</button>
+    <button>aggiorna</button>
+    <button type="button"></button>
   </form>
 </div>
