--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,18 +54,27 @@
         <img [src]="profileData?.image" />
         <input type="text" placeholder="Avvia un post" />
       </div>
-      <div>
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-card-image mx-1 text-primary"></i> Contenuti
-          Multimediali</a
-        >
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
-        >
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-newspaper mx-1 text-danger-emphasis"></i>Scrivi un
-          articolo</a
-        >
+      <div
+        class="row row-cols-1 row-cols-md-3 justify-content-center align-items-center"
+        style="width: 70%"
+      >
+        <div>
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-card-image mx-1 text-primary"></i> Contenuti
+            Multimediali</a
+          >
+        </div>
+        <div>
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
+          >
+        </div>
+        <div>
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-newspaper mx-1 text-danger-emphasis"></i>Scrivi un
+            articolo</a
+          >
+        </div>
       </div>
     </div>
 
