--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,281 +1,327 @@
 <div id="empty"></div>
-<div class="row justify-content-center">
-  <!-- Colonna di sinistra -->
-  <div class="col-3 d-none d-xl-block" id="first-col">
-    <div class="card" style="width: 18rem">
-      <div class="position-relative div-img-profile w-100 m-0 p-0">
-        <!-- Copertina -->
-        <img
-          src="./../assets/imgs/profile-top-image.png"
-          alt=""
-          class="img-fluid w-100 cover-image"
-        />
-        <!-- Propic -->
-        <div class="profile-img-container">
+<div class="container-fluid">
+  <div class="row row-cols-12 row-cols-xxl-3">
+    <!-- Colonna di sinistra -->
+    <div class="col d-none d-xxl-block" id="first-col">
+      <div class="card" style="width: 18rem">
+        <div class="position-relative div-img-profile w-100 m-0 p-0">
+          <!-- Copertina -->
+          <img
+            src="./../assets/imgs/profile-top-image.png"
+            alt=""
+            class="img-fluid w-100 cover-image"
+          />
+          <!-- Propic -->
+          <div class="profile-img-container">
+            <img
+              [src]="profileData?.image"
+              alt=""
+              class="rounded-circle profile-img"
+            />
+          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title text-center w-100">
+            {{ profileData?.name }} {{ profileData?.surname }}
+            <br />
+            <span class="fs-6 text-secondary">{{ profileData?.title }}</span>
+          </h5>
+          <hr />
+          <p class="fw-bold">
+            <span class="text-secondary fw-light">Collegamenti</span>
+            <br />
+            Espandi la rete
+          </p>
+          <hr />
+          <p>
+            <span class="text-secondary">
+              Accedi a strumenti e informazioni in esclusiva
+            </span>
+          </p>
+          <hr />
+          <p><i class="bi bi-bookmark-fill"></i> i miei elementi</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Colonna centrale -->
+    <div class="col">
+      <!-- Parte alta -->
+      <div
+        class="container-fluid d-flex flex-column justify-content-center align-items-center"
+        id="new-post"
+      >
+        <div class="d-flex mb-3">
+          <img [src]="profileData?.image" />
+          <button
+            type="button"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            id="createPost"
+          >
+            Avvia un post
+          </button>
+        </div>
+        <div>
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-card-image mx-1 text-primary"></i> Contenuti
+            Multimediali</a
+          >
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
+          >
+          <a href="" class="mx-3 text-decoration-none">
+            <i class="bi bi-newspaper mx-1 text-danger-emphasis"></i>Scrivi un
+            articolo</a
+          >
+        </div>
+      </div>
+
+      <!-- parte dei post -->
+      <div id="myGroup">
+        <div
+          class="container-fluid w-100 mt-5 d-flex justify-content-center panel"
+          *ngFor="let post of posts"
+        >
+          <div class="card">
+            <div class="card-body">
+              <div class="d-flex">
+                <img [src]="post.user.image" class="card-img-top" alt="..." />
+                <h3 class="card-title fw-bold">
+                  {{ post.user.name }} {{ post.user.surname }}
+                </h3>
+              </div>
+              <p class="card-text fs-6 text-secondary">
+                {{ post.user.title }}
+                <br />
+
+                {{ post.createdAt | dateDay }}
+                <br />
+              </p>
+              <p class="fs-5">{{ post.text }}</p>
+            </div>
+
+            <div class="mt-3 mb-3">
+              <a
+                href="#"
+                class="mx-4 text-decoration-none fs-6 text-black fw-bold"
+                ><i class="bi bi-hand-thumbs-up"></i> &nbsp; Consiglia</a
+              >
+              <a
+                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+                data-bs-toggle="collapse"
+                href="#collapse-{{ post._id }}"
+                aria-expanded="false"
+                (click)="loadComments(post._id)"
+                ><i class="bi bi-chat-text"></i> &nbsp; Commenta</a
+              >
+              <a
+                href="#"
+                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+                ><i class="bi bi-upload"></i> &nbsp; Diffondi il post</a
+              >
+              <a
+                href="#"
+                class="mx-3 text-decoration-none fs-6 text-black fw-bold"
+                ><i class="bi bi-share"></i> &nbsp; Invia</a
+              >
+            </div>
+
+            <!-- Collapse dei commenti -->
+            <div
+              class="collapse"
+              id="collapse-{{ post._id }}"
+              data-bs-parent="#myGroup"
+            >
+              <div class="card card-body">
+                <div
+                  class="comments mx-3 my-2"
+                  *ngFor="let comment of comments"
+                >
+                  <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
+                  <div class="comment-bubble mx-4">
+                    {{ comment.comment }}
+                  </div>
+                </div>
+                <!-- Inserisci commento -->
+                <input
+                  type="text"
+                  id="commento"
+                  placeholder="Aggiungi un commento"
+                  [(ngModel)]="currentComment"
+                  name="title"
+                  class="d-block w-100 rounded-2 my-2"
+                  [value]="currentComment"
+                />
+                <button
+                  class="btn-send mb-2"
+                  data-bs-toggle="collapse"
+                  attr.data-bs-target="#collapse-{{ post._id }}"
+                  aria-expanded="false"
+                  *ngIf="currentComment.length > 3"
+                  (click)="addComment(post._id)"
+                >
+                  Pubblica
+                </button>
+
+                <!-- Commenti -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Colonna di destra -->
+    <div class="col d-none d-xxl-block">
+      <!-- Parte dei profili consigliati -->
+      <div class="linkedin-box w-50 mx-auto">
+        <div class="p-box-contentent">
+          <h5 class="bold">Notizie</h5>
+        </div>
+        <div>
+          <div *ngFor="let post of posts; let i = index">
+            <div class="linkedin-box-content pt-0" *ngIf="i < 5">
+              <div class="d-flex">
+                <div class="ms-2">
+                  <p class="card-title fw-bold">
+                    {{ post.user.name }} {{ post.user.surname }}
+                  </p>
+                  <p class="text-secondary">
+                    {{ post.text | slice : 0 : 100
+                    }}{{ post.text.length > 100 ? "..." : "" }}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Parte degli annunci -->
+      <div class="linkedin-box w-50 mt-5 mx-auto">
+        <p class="text-end m-0 addPann">
+          annuncio
+          <button
+            type="button"
+            class="btn p-0"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal2"
+          >
+            ∙∙∙
+          </button>
+        </p>
+        <p class="addPann text text-center m-1">
+          scorpi la formazione presso epicode
+        </p>
+        <div class="d-flex justify-content-center">
           <img
             [src]="profileData?.image"
             alt=""
-            class="rounded-circle profile-img"
+            class="rounded-circle profileAddsImg me-2"
           />
+          <a href="https://epicode.com/it">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQROaS3ruCLNEDynCYsFxDvt03s1oYBBqhz2Is_kJBcd23576MEEip3dWZuWOtQvPcP8MU&usqp=CAU"
+              class="rounded-circle profileAddsImg"
+          /></a>
         </div>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title text-center w-100">
-          {{ profileData?.name }} {{ profileData?.surname }}
-          <br />
-          <span class="fs-6 text-secondary">{{ profileData?.title }}</span>
-        </h5>
-        <hr />
-        <p class="fw-bold">
-          <span class="text-secondary fw-light">Collegamenti</span>
-          <br />
-          Espandi la rete
+        <p class="text text-center my-2">
+          {{ profileData?.name }}, sopri le opportunità offerte da
+          <span class="spanEpicodeAdd">epicode</span>
         </p>
-        <hr />
-        <p>
-          <span class="text-secondary">
-            Accedi a strumenti e informazioni in esclusiva
-          </span>
-        </p>
-        <hr />
-        <p><i class="bi bi-bookmark-fill"></i> i miei elementi</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Colonna centrale -->
-  <div class="col-8">
-    <!-- Parte alta -->
-    <div
-      class="container d-flex flex-column justify-content-center align-items-center"
-      id="new-post"
-    >
-      <div class="d-flex mb-3">
-        <img [src]="profileData?.image" />
-        <input type="text" placeholder="Avvia un post" />
-      </div>
-      <div>
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-card-image mx-1 text-primary"></i> Contenuti
-          Multimediali</a
-        >
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
-        >
-        <a href="" class="mx-3 text-decoration-none">
-          <i class="bi bi-newspaper mx-1 text-danger-emphasis"></i>Scrivi un
-          articolo</a
-        >
-      </div>
-    </div>
-
-    <!-- parte dei post -->
-    <div id="myGroup">
-      <div
-        class="container-fluid w-100 mt-5 d-flex justify-content-center panel"
-        *ngFor="let post of posts"
-      >
-        <div class="card">
-          <!-- Info post -->
-          <div class="card-body">
-            <div class="d-flex">
-              <img [src]="post.user.image" class="card-img-top" alt="..." />
-              <h3 class="card-title fw-bold">
-                {{ post.user.name }} {{ post.user.surname }}
-              </h3>
-            </div>
-            <p class="card-text fs-6 text-secondary">
-              {{ post.user.title }}
-              <br />
-
-              {{ post.createdAt | dateDay }}
-              <br />
-            </p>
-            <p class="fs-5">{{ post.text }}</p>
-          </div>
-          <!-- Pulsanti post -->
-          <div class="mt-3 mb-3">
-            <a
-              href="#"
-              class="mx-4 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-hand-thumbs-up text-truncate"></i> &nbsp;
-              Consiglia</a
-            >
-            <a
-              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-              data-bs-toggle="collapse"
-              href="#collapse-{{ post._id }}"
-              aria-expanded="false"
-              (click)="loadComments(post._id)"
-              ><i class="bi bi-chat-text text-truncate"></i> &nbsp; Commenta</a
-            >
-            <a
-              href="#"
-              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-upload text-truncate"></i> &nbsp; Diffondi il
-              post</a
-            >
-            <a
-              href="#"
-              class="mx-3 text-decoration-none fs-6 text-black fw-bold"
-              ><i class="bi bi-share text-truncate"></i> &nbsp; Invia</a
-            >
-          </div>
-
-          <!-- Collapse dei commenti -->
-          <div
-            class="collapse"
-            id="collapse-{{ post._id }}"
-            data-bs-parent="#myGroup"
+        <div class="d-flex justify-content-center">
+          <a href="https://www.linkedin.com/school/epicodeitalia/">
+            <button class="btn btn-blue mb-3">segui</button></a
           >
-            <div class="card card-body w-100">
-              <!-- Inserisci commento -->
-              <input
-                type="text"
-                id="commento"
-                placeholder="Aggiungi un commento"
-                [(ngModel)]="currentComment"
-                name="title"
-                class="d-block w-100 rounded-2 my-2"
-                [value]="currentComment"
-              />
-              <button
-                class="btn-send mb-2"
-                data-bs-toggle="collapse"
-                attr.data-bs-target="#collapse-{{ post._id }}"
-                aria-expanded="false"
-                *ngIf="currentComment.length > 3"
-                (click)="addComment(post._id)"
-              >
-                Pubblica
-              </button>
-              <!-- Commenti -->
-              <div
-                class="comments mx-3 my-2 row justify-content-center align-items-center"
-                *ngFor="let comment of comments"
-              >
-                <p *ngIf="profileData?._id === comment.elementId">tuo</p>
-                <div class="col-2">
-                  <i class="bi bi-person-circle fs-2 text-info-emphasis"></i>
-                </div>
-
-                <div class="comment-bubble mx-3 col-9">
-                  {{ comment.comment }}
-                </div>
-              </div>
-
-              <!-- Commenti -->
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- Colonna di destra -->
-  <div class="col">
-    <!-- Parte dei profili consigliati -->
-    <div class="linkedin-box w-50 mx-auto">
-      <div class="p-box-contentent">
-        <h5 class="bold">Notizie</h5>
-      </div>
-      <div>
-        <div *ngFor="let post of posts; let i = index">
-          <div class="linkedin-box-content pt-0" *ngIf="i < 5">
-            <div class="d-flex">
-              <div class="ms-2">
-                <p class="card-title fw-bold">
-                  {{ post.user.name }} {{ post.user.surname }}
-                </p>
-                <p class="text-secondary">
-                  {{ post.text | slice : 0 : 100
-                  }}{{ post.text.length > 100 ? "..." : "" }}
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Parte degli annunci -->
-    <div class="linkedin-box w-50 mt-5 mx-auto">
-      <p class="text-end m-0 addPann">
-        annuncio
+</div>
+<!-- Modale per il nuovo post -->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          Avvia un nuovo post
+        </h1>
         <button
           type="button"
-          class="btn p-0"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal2"
-        >
-          ∙∙∙
-        </button>
-      </p>
-      <!-- Button trigger modal -->
-
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="exampleModal2"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel2"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel2">
-                Opzioni annuncio
-              </h1>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body annucioPopUP">
-              <div class="d-flex">
-                <i class="bi bi-info-square-fill me-1"></i>
-                <div class="user-select-none">
-                  <p class="bold m-0">perchè vedo questo annuncio?</p>
-                  <p>gestisci le preferenze per gli annunci pubblicitari</p>
-                </div>
-              </div>
-              <div class="d-flex">
-                <i class="bi bi-flag-fill me-1"></i>
-                <div>
-                  <p class="bold m-0">segnala questo annuncio</p>
-                  <p>non voglio vedere questo annucio nel mio feed</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3">
+          <textarea
+            class="form-control"
+            id="inputTextArea"
+            rows="4"
+            [(ngModel)]="text"
+            placeholder="Di cosa vorresti parlare?"
+          ></textarea>
         </div>
       </div>
-
-      <p class="addPann text text-center m-1">
-        scorpi la formazione presso epicode
-      </p>
-      <div class="d-flex justify-content-center">
-        <img
-          [src]="profileData?.image"
-          alt=""
-          class="rounded-circle profileAddsImg me-2"
-        />
-        <a href="https://epicode.com/it">
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQROaS3ruCLNEDynCYsFxDvt03s1oYBBqhz2Is_kJBcd23576MEEip3dWZuWOtQvPcP8MU&usqp=CAU"
-            class="rounded-circle profileAddsImg"
-        /></a>
-      </div>
-      <p class="text text-center my-2">
-        {{ profileData?.name }}, sopri le opportunità offerte da
-        <span class="spanEpicodeAdd">epicode</span>
-      </p>
-      <div class="d-flex justify-content-center">
-        <a href="https://www.linkedin.com/school/epicodeitalia/">
-          <button class="btn btn-blue mb-3">segui</button></a
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-dismiss="modal"
+          (click)="saveNewPost()"
+          [disabled]="!text"
         >
+          Pubblica
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modale del annuncio -->
+<div
+  class="modal fade"
+  id="exampleModal2"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel2"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel2">
+          Opzioni annuncio
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body annucioPopUP">
+        <div class="d-flex">
+          <i class="bi bi-info-square-fill me-1"></i>
+          <div class="user-select-none">
+            <p class="bold m-0">perchè vedo questo annuncio?</p>
+            <p>gestisci le preferenze per gli annunci pubblicitari</p>
+          </div>
+        </div>
+        <div class="d-flex">
+          <i class="bi bi-flag-fill me-1"></i>
+          <div>
+            <p class="bold m-0">segnala questo annuncio</p>
+            <p>non voglio vedere questo annucio nel mio feed</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
