--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,10 +48,10 @@
     <div class="col">
       <!-- Parte alta -->
       <div
-        class="container-fluid d-flex flex-column justify-content-center align-items-center"
+        class="container d-flex w-100 flex-column justify-content-center align-items-center"
         id="new-post"
       >
-        <div class="d-flex mb-3">
+        <div class="d-flex mb-3 w-100 justify-content-center">
           <img [src]="profileData?.image" />
           <button
             type="button"
@@ -62,18 +62,26 @@
             Avvia un post
           </button>
         </div>
-        <div>
-          <a href="" class="mx-3 text-decoration-none">
-            <i class="bi bi-card-image mx-1 text-primary"></i> Contenuti
-            Multimediali</a
-          >
-          <a href="" class="mx-3 text-decoration-none">
-            <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
-          >
-          <a href="" class="mx-3 text-decoration-none">
-            <i class="bi bi-newspaper mx-1 text-danger-emphasis"></i>Scrivi un
-            articolo</a
-          >
+        <div class="row w-100 justify-content-center align-items-center">
+          <div class="col-4 text-center">
+            <a href="" class="text-decoration-none">
+              <i class="bi bi-card-image mx-1 text-primary"></i>
+              Contenuti Multimediali</a
+            >
+          </div>
+          <div class="col-4 text-center">
+            <a href="" class="text-decoration-none">
+              <i class="bi bi-calendar3 mx-1 text-warning"></i>Evento</a
+            >
+          </div>
+          <div class="col-4 text-center">
+            <a href="" class="text-decoration-none">
+              <i
+                class="bi bi-newspaper mx-1 text-danger-emphasis text-truncate"
+              ></i
+              >Scrivi un articolo</a
+            >
+          </div>
         </div>
       </div>
 
@@ -133,7 +141,7 @@
               id="collapse-{{ post._id }}"
               data-bs-parent="#myGroup"
             >
-              <div class="card card-body">
+              <div class="card card-body w-100">
                 <div
                   class="comments mx-3 my-2"
                   *ngFor="let comment of comments"
