--- a/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
+++ b/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
@@ -43,6 +43,6 @@
       [(ngModel)]="experienceData.endDate"
     />
     <button>aggiorna</button>
-    <button type="button"></button>
+    <button type="button" (click)="deleteExperience()">elimina</button>
   </form>
 </div>
