--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -220,9 +220,127 @@
         </div>
 
         <!-- Box di test -->
-        <div class="col g-4 linkedin-box p-0">
+        <!-- <div class="col g-4 linkedin-box p-0">
           <div class="col g-4 linkedin-box-content"></div>
+        </div> -->
+
+        <!-- Box formazione -->
+
+        <div class="col g-4 linkedin-box p-0">
+          <div class="linkedin-box-content">
+            <!-- Prima riga -->
+            <div class="row row-cols-2 align-items-center mb-3">
+              <div><h5 class="d-inline">Formazione</h5></div>
+              <div class="text-end">
+                <!-- Icona + -->
+                <button
+                  type="button "
+                  class="btn-icon"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal3"
+                >
+                  <i class="bi bi-plus-lg"></i>
+                </button>
+
+                <!-- Icona matita -->
+                <button type="button " class="btn-icon">
+                  <a routerLink="formazione">
+                    <i class="bi bi-pencil text-secondary"></i
+                  ></a>
+                </button>
+              </div>
+            </div>
+            <!-- Inizio esperienze -->
+            <div *ngFor="let experience of experienceData">
+              <div class="row">
+                <!-- Immagine istituto di formazione -->
+                <div class="col-2 text-center">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/2/24/Logo_Sapienza_Universit%C3%A0_di_Roma.jpg"
+                    height="60px"
+                    width="60px"
+                  />
+                </div>
+                <!-- Descrizione -->
+                <div class="col-10">
+                  <p class="fw-bold fs-4 m-0">{{ experience.role }}</p>
+                  <p class="fs-profile fs-5 m-0">{{ experience.company }}</p>
+                  <p class="fs-profile text-secondary m-0">
+                    {{ experience.startDate | dateFormatter }} -
+                    {{ experience.endDate | dateFormatter }} - durata
+                    complessiva
+                  </p>
+                  <p class="fs-profile text-secondary m-0">
+                    {{ experience.area }}
+                  </p>
+                  <p class="fs-profile">
+                    <span class="fw-bold">Competenze:</span>CSS HTML Jquery
+                    Javascript SQL
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <!-- Box informazioni -->
+        <div class="col g-4 linkedin-box p-0">
+          <div class="linkedin-box-content">
+            <!-- Prima riga -->
+            <div class="row row-cols-2 align-items-center mb-3">
+              <div><h5 class="d-inline">Informazioni</h5></div>
+              <div class="text-end">
+                <!-- Icona + -->
+                <button
+                  type="button "
+                  class="btn-icon"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal3"
+                >
+                  <i class="bi bi-plus-lg"></i>
+                </button>
+
+                <!-- Icona matita -->
+                <button type="button " class="btn-icon">
+                  <a routerLink="esperienze">
+                    <i class="bi bi-pencil text-secondary"></i
+                  ></a>
+                </button>
+              </div>
+            </div>
+            <!-- Inizio esperienze -->
+            <div *ngFor="let experience of experienceData">
+              <div class="row">
+                <!-- Immagine azienda -->
+                <div class="col-2 text-center">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
+                    height="60px"
+                    width="60px"
+                  />
+                </div>
+                <!-- Descrizione -->
+                <div class="col-10">
+                  <p class="fw-bold fs-4 m-0">{{ experience.role }}</p>
+                  <p class="fs-profile fs-5 m-0">{{ experience.company }}</p>
+                  <p class="fs-profile text-secondary m-0">
+                    {{ experience.startDate | dateFormatter }} -
+                    {{ experience.endDate | dateFormatter }} - durata
+                    complessiva
+                  </p>
+                  <p class="fs-profile text-secondary m-0">
+                    {{ experience.area }}
+                  </p>
+                  <p class="fs-profile">
+                    <span class="fw-bold">Competenze:</span>CSS HTML Jquery
+                    Javascript SQL
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Fine box centrali -->
       </div>
     </div>
 
