--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -143,41 +143,54 @@
             >
               <div class="card card-body w-100">
                 <!-- Inserisci commento -->
-                <input
-                  type="text"
-                  id="commento"
-                  placeholder="Aggiungi un commento"
-                  [(ngModel)]="currentComment"
-                  name="title"
-                  class="d-block w-100 rounded-2 my-2"
-                  [value]="currentComment"
-                />
-                <button
-                  class="btn-send mb-2"
-                  data-bs-toggle="collapse"
-                  attr.data-bs-target="#collapse-{{ post._id }}"
-                  aria-expanded="false"
-                  *ngIf="currentComment.length > 3"
-                  (click)="addComment(post._id)"
-                >
-                  Pubblica
-                </button>
+                <div>
+                  <input
+                    type="text"
+                    id="commento"
+                    placeholder="Aggiungi un commento"
+                    [(ngModel)]="currentComment"
+                    name="title"
+                    class="d-block w-100 rounded-2 my-2"
+                    [value]="currentComment"
+                  />
+                  <button
+                    class="btn-send mb-2"
+                    data-bs-toggle="collapse"
+                    attr.data-bs-target="#collapse-{{ post._id }}"
+                    aria-expanded="false"
+                    *ngIf="currentComment.length > 3"
+                    (click)="addComment(post._id)"
+                  >
+                    Pubblica
+                  </button>
+                </div>
+                <!-- Commenti -->
                 <div
                   class="comments mx-3 my-2"
                   *ngFor="let comment of comments"
                 >
-                  <div class="row">
-                    <div class="col-1">
-                      <i
-                        class="bi bi-person-circle fs-2 text-info-emphasis"
-                      ></i>
+                  <div class="row justify-content-center">
+                    <div class="col-12">
+                      <div class="d-flex align-items-center">
+                        <div>
+                          <i
+                            class="bi bi-person-circle fs-2 text-info-emphasis"
+                          ></i>
+                        </div>
+                        <div class="px-2">{{ comment.author }}</div>
+                      </div>
                     </div>
-                    <div class="col-11">
-                      <div class="comment-bubble mx-4">
+                    <div class="col-12">
+                      <div class="bubble mx-4">
                         {{ comment.comment }}
                       </div>
                     </div>
                   </div>
+                </div>
+                <div *ngIf="comments.length === 0">
+                  <p class="fs-3 text-center">
+                    Non ci sono ancora commenti qui... 🐋💨
+                  </p>
                 </div>
               </div>
             </div>
