--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -382,7 +382,7 @@
             /></a>
           </div>
           <p class="text text-center my-2">
-            {{ profileData?.name }}, sopri le opportunità offerte da
+            {{ profileData.name }}, sopri le opportunità offerte da
             <span class="spanEpicodeAdd">epicode</span>
           </p>
           <div class="d-flex justify-content-center">
