Edit of the posts in HomePage

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -85,12 +85,24 @@
         >
           <div class="card">
             <div class="card-body">
-              <div class="d-flex">
+              <div class="d-flex align-items-center">
                 <img [src]="post.user.image" class="card-img-top" alt="..." />
                 <h3 class="card-title fw-bold">
                   {{ post.user.name }} {{ post.user.surname }}
                 </h3>
+                <ng-container *ngIf="isMyPost(post)">
+                  <button
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#exampleModal4"
+                    id="modify-post"
+                    (click)="initializeEditModal(post)"
+                  >
+                    <i class="bi bi-pencil-fill"></i>
+                  </button>
+                </ng-container>
               </div>
+
               <p class="card-text fs-6 text-secondary">
                 {{ post.user.title }}
                 <br />
@@ -322,6 +334,45 @@
             <p>non voglio vedere questo annucio nel mio feed</p>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="exampleModal4"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Edit del post</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <textarea
+          class="w-100"
+          rows="4"
+          [(ngModel)]="editedPostText"
+        ></textarea>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="editPost()"
+          data-bs-dismiss="modal"
+        >
+          Save changes
+        </button>
       </div>
     </div>
   </div>
