Esperienze e formazione css

--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -55,11 +55,11 @@
           <div class="card mt-2">
             <div class="card-body">
               <h5 class="card-title">Altri profili consultati</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <img src="http://www.placekitten.com/100" />
+              <p class="card-text">Micio</p>
+              <button class="mb-2 marginButtuonIcon d-block btn btn-gray">
+                <i class="bi bi-person-fill-add"></i> Collegati
+              </button>
             </div>
           </div>
         </div>
