--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,10 +100,13 @@ $amount: 45;
 
 .profile-img {
   position: absolute;
-  width: 21%;
+  width: 100px;
+  height: 100px;
   border: 3px solid white;
-  top: 65px;
+  top: 40px;
   left: 24px;
+  background-size: cover;
+  background-position: center;
 }
 
 .side-box {
