--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -533,7 +533,7 @@
             /></a>
           </div>
           <p class="text text-center my-2">
-            {{ profileData?.name }}, scopri le opportunità offerte da
+            {{ profileData.name }}, scopri le opportunità offerte da
             <span class="spanEpicodeAdd">Epicode</span>
           </p>
           <div class="d-flex justify-content-center">
