--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -19,7 +19,7 @@
             <img
               src="./../assets/imgs/profile-top-image.png"
               alt=""
-              class="img-fluid w-100 cover-image"
+              class="img-fluid w-100 cover-img"
             />
             <!-- Propic -->
             <img
