mini fix linkedin box

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid">
   <div class="row row-cols-12 row-cols-xxl-3">
     <!-- Colonna di sinistra -->
-    <div class="col d-none d-xxl-block" id="first-col">
-      <div class="card float-end" style="width: 18rem">
+    <div class="col d-none d-xxl-block link" id="first-col">
+      <div class="card float-end linkedin-box" style="width: 18rem">
         <div class="position-relative div-img-profile w-100 m-0 p-0">
           <!-- Copertina -->
           <img
@@ -88,7 +88,7 @@
       <!-- parte dei post -->
       <div id="myGroup">
         <div
-          class="container-fluid w-100 mt-5 d-flex justify-content-center panel"
+          class="container-fluid w-100 mt-5 d-flex justify-content-center panel linkedin-box"
           *ngFor="let post of posts"
         >
           <div class="card">
