--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,32 +7,29 @@
   width: 75%;
 }
 
-#empty{
-  margin-top:100px
+#empty {
+  margin-top: 100px;
 }
 
-.card{
-   width: 600px;
+.card {
+  width: 600px;
   border-radius: 20px;
   border: none;
-
 }
 
-img{
+img {
   width: 30px;
   border-radius: 40px;
   height: 30px;
   margin-right: 20px;
 }
 
-.btn-send
-{
+.btn-send {
   color: white;
   background-color: #0a66c2;
   border-radius: 25px;
   width: 80px;
   font-size: 15px;
-
 }
 .comment-bubble {
   position: relative;
@@ -69,7 +66,7 @@ img{
   padding: 20px;
 }
 .bubble:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 0;
@@ -82,36 +79,30 @@ img{
   margin-left: -4.5px;
 }
 
-
-#new-post{
+#new-post {
   background-color: white;
   height: 150px;
   border-radius: 20px;
-  input{
+  input {
     width: 300px;
-    margin-right:20px;
+    margin-right: 20px;
     border-radius: 20px;
     border: solid 1px gainsboro;
     height: 30px;
     padding-left: 20px;
   }
-  a{
-
+  a {
     font-size: 0.9em;
     color: black;
-    i{
+    i {
       font-size: 1.5em;
-
     }
   }
 }
 
-#first-col{
+#first-col {
   padding-left: 160px;
-
 }
-
-
 
 .div-img-profile {
   position: relative;
@@ -130,10 +121,6 @@ img{
   position: absolute;
   top: -55%;
   left: 30%;
-
-
-
-
 }
 
 .profile-img {
@@ -142,18 +129,17 @@ img{
   object-fit: cover;
 }
 
-.card-body{
-  p{
+.card-body {
+  p {
     font-size: 0.8em;
   }
 }
 
-right-col{
+right-col {
   width: 400px;
-
 }
 
-#createPost{
+#createPost {
   width: 450px;
   border: solid 1px gainsboro;
   background-color: white;
@@ -163,10 +149,9 @@ right-col{
   padding-left: 20px;
 }
 
-
-#modify-post{
+#modify-post {
   border: none;
   background-color: white;
   margin-left: 200px;
-  color:gray;
+  color: gray;
 }
