--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -19,15 +19,8 @@
                   <p class="fw-bold m-0">{{ experience.role }}</p>
 
                   <div>
-                    <a href="#" (click)="modifica(experience._id)">
-                      <i class="bi bi-pencil text-secondary"></i>
-                    </a>
-                    <a
-                      href="#"
-                      class="text-decoration-none text-dark"
-                      (click)="deleteExperience(experience._id)"
-                    >
-                      <!-- Delete -->
+                    <a (click)="modifica(experience._id)" class="pointer">
+                      <i class="bi bi-pencil text-secondary pointer"></i>
                     </a>
                   </div>
                 </div>
