--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -77,21 +77,38 @@
             (click)="toggleMeDropdown()"
             style="cursor: pointer"
           >
-            <i class="bi bi-person-circle"></i>
-            <div class="d-flex align-items-center">
-              <button class="dropdown-button" id="tu">
-                Tu <i class="bi bi-caret-down-fill fs-6"></i>
-              </button>
+            <div class="flex-column justify-content-center">
+              <div style="text-align: center">
+                <img [src]="profileData?.image" alt="" class="nav-img" />
+              </div>
+
+              <div class="d-flex align-items-center">
+                <button class="dropdown-button" id="tu">
+                  Tu <i class="bi bi-caret-down-fill fs-6"></i>
+                </button>
+              </div>
             </div>
+
             <!-- user dropdown -->
             <ul class="dropdown-list" *ngIf="isMeDropdownOpen">
               <li class="dropdown-item">
                 <div class="d-flex">
-                  <i class="bi bi-person-circle text-primary fs-2"></i>
-                  <p class="ms-3 fw-bold">
-                    {{ profileData?.name }} {{ profileData?.surname }} <br />
-                    <span class="fw-light">{{ profileData?.title }}</span>
-                  </p>
+                  <div class="row align-items-center my-2">
+                    <div class="col-3">
+                      <img
+                        [src]="profileData?.image"
+                        alt=""
+                        class="nav-img-2"
+                      />
+                    </div>
+                    <div class="col-9">
+                      <p class="ms-3 fw-bold">
+                        {{ profileData?.name }} {{ profileData?.surname }}
+                        <br />
+                        <span class="fw-light">{{ profileData?.title }}</span>
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <button
                   type="button"
