--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -186,3 +186,20 @@ nav{
     height: 500px;
   }
 }
+
+.nav-img
+{
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  text-align: center;
+}
+
+.nav-img-2
+{
+  border-radius: 100%;
+  height: 60px;
+  width: 60px;
+  text-align: center;
+}
+
