--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -26,7 +26,7 @@
               <img
                 [src]="profileData.image"
                 alt=""
-                class="rounded-circle profile-img"
+                class="rounded-circle profile-img-proto"
               />
             </div>
           </div>
