--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,17 @@ $amount: 45;
   height: 50px !important;
 }
 
+.profile-img-proto {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  border: 3px solid white;
+  top: 65px;
+  left: 24px;
+  background-size: cover;
+  background-position: center;
+}
+
 .profile-img {
   position: absolute;
   width: 100px;
