Corrette immagini del profilo

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -494,7 +494,9 @@
             <img
               [src]="profileData.image"
               alt=""
-              class="rounded-circle profileAddsImg me-2"
+              class="rounded-circle profileAddsImg"
+              width="50"
+              height="50"
             />
             <a href="https://epicode.com/it">
               <img
