--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -88,7 +88,7 @@
       <!-- parte dei post -->
       <div id="myGroup">
         <div
-          class="container-fluid w-100 mt-5 d-flex justify-content-center panel linkedin-box"
+          class="container mt-5 d-flex justify-content-center panel linkedin-box"
           *ngFor="let post of posts"
         >
           <div class="card">
@@ -107,6 +107,9 @@
                     (click)="initializeEditModal(post)"
                   >
                     <i class="bi bi-pencil-fill"></i>
+                  </button>
+                  <button id="delete-post" (click)="deletePost(post._id)">
+                    <i class="bi bi-trash-fill"></i>
                   </button>
                 </ng-container>
               </div>
