--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -12,7 +12,7 @@
 }
 
 .card {
-  width: 600px;
+  max-width: 600px;
   border-radius: 20px;
   border: none;
 }
@@ -153,5 +153,12 @@ right-col {
   border: none;
   background-color: white;
   margin-left: 200px;
+  color: gray;
+}
+
+#delete-post{
+  border: none;
+  background-color: white;
+
   color: gray;
 }
