--- a/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
+++ b/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
@@ -42,7 +42,9 @@
       [value]="experienceData.endDate"
       [(ngModel)]="experienceData.endDate"
     />
-    <button>aggiorna</button>
-    <button type="button" (click)="deleteExperience()">elimina</button>
+    <button class="btn btn-blue">aggiorna</button>
+    <button type="button" class="btn btn-blue" (click)="deleteExperience()">
+      elimina
+    </button>
   </form>
 </div>
