Fix immagine esperienze component

--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -12,6 +12,7 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Valve-logo.jpg/1024px-Valve-logo.jpg"
                 height="60px"
                 width="60px"
+                class="m-3"
               />
               <div class="ms-2 card-body">
                 <!-- Descrizione -->
