--- a/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
+++ b/src/app/pages/modifica-esperienze/modifica-esperienze.component.html
@@ -1,6 +1,6 @@
 <div class="m">
   <form class="ms-4" #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
-    <label for="role" class="form-label" name="role"> modifica ruolo</label>
+    <label for="role" class="form-label" name="role"> Modifica ruolo</label>
     <input
       type="text"
       id="role"
@@ -10,7 +10,7 @@
       [(ngModel)]="experienceData.role"
     />
     <label for="company" class="form-label" name="company">
-      modifica azienda</label
+      Modifica azienda</label
     >
     <input
       type="text"
@@ -21,7 +21,7 @@
       [(ngModel)]="experienceData.company"
     />
     <label for="startDate" class="form-label" name="startDate">
-      modifica data inizio</label
+      Modifica data inizio</label
     >
     <input
       type="text"
@@ -32,7 +32,7 @@
       [(ngModel)]="experienceData.startDate"
     />
     <label for="endDate" class="form-label" name="endDate">
-      modifica data fine</label
+      Modifica data fine</label
     >
     <input
       type="text"
