--- a/src/app/pages/esperienze/esperienze.component.html
+++ b/src/app/pages/esperienze/esperienze.component.html
@@ -20,9 +20,9 @@
                   <p class="fw-bold m-0">{{ experience.role }}</p>
 
                   <div>
-                    <a (click)="modifica(experience._id)" class="pointer">
+                    <button (click)="modifica(experience._id)" class="btn-icon">
                       <i class="bi bi-pencil text-secondary pointer"></i>
-                    </a>
+                    </button>
                   </div>
                 </div>
 
